--- a/ToDo
+++ b/ToDo
@@ -1,7 +1,3 @@
 > Make Cards Clickable in TestGameScreen 
-> Make UI display a "currently selected" card for non mouse/touch screen layouts. 
 > Touch, mouseclick, enter key, or space key: select and turn card
-> Accept keyboard input
-> Create a shuffle function for the card grid 2d array (try to implement Fisher-Yates aka Knuth Shuffle)
-> When selecting a card, need to iterate through the grid and check if one card is already face-up and not matched. If yes, compare the cards and check for match. If no, flip the card. 
-> When comparing cards, need to skip ones already with "matched" state
+> Create a shuffle function for the card grid 2d array (try to implement Fisher-Yates aka Knuth Shuffle) [alternative: push all elements into a single array, shuffle that, then re-populate the 2D array]
