Added a hud to display time elapsed. Refactored more code so that grid is displayed semi-dynamically.

--- a/ToDo
+++ b/ToDo
@@ -2,6 +2,5 @@
 > Add Touch controls
 > Add Mouse controls
 > Music and SFX
-> Connect grid size selection screen to actual play screen
-> Calculate padding and start position dynamically, so that the grid is always centered. 
-> Game over screen 
+> Add a colour blind mode
+> Add functionality to settings screen 
