Refactored 'Options' screen into a modular pop-up. Updated other screens and buttons to use this instead. Also needed to update so that background colours updated correctly with now pop-up.

--- a/ToDo
+++ b/ToDo
@@ -1,5 +1,6 @@
 > Expand Keyboard controls (tabbing for menu items, enter to select, etc.)
 > Add a colour blind mode
 > Prepare for HTML distribution
-> Add Pause menu to navigate back to settings, quit to main menu.
-> Add function to store current game state during pause, and allow it to revert if unpaused after going to different screen (e.g. options)
+> Timer for gameplay does not account for 'paused time'. Update functionality so that it appropriately counts when game unpauses. 
+> In "Options" screen, add swatches to display palette used by cards.
+> 
