Removed redundant randomizers. Improved shuffling of arrays by adding a 'randomize' call to make order less deterministic.

--- a/ToDo
+++ b/ToDo
@@ -1,4 +1,3 @@
+Future Improvements:
 > Expand Keyboard controls (tabbing for menu items, enter to select, etc.)
 > In "Options" screen, add swatches to display palette used by cards.
-> Remember to change config file from RES to USER 
-> Test config saving via cookies in browser
