Updated Pause pop-up with internationalization code.

--- a/ToDo
+++ b/ToDo
@@ -5,7 +5,7 @@
 	- Use localization/translation features to add other language options. 
 		) Start screen ; Done
 		) Options pop-up ; Almost Done (see next future implementation)
-		) Pause pop-up ; 
+		) Pause pop-up ; Done
 		) Credits Screen ; 
 		) High Scores Screen ; 
 		) How to Play screen ; 
