Updated How-to play screen with internationalization code.

--- a/ToDo
+++ b/ToDo
@@ -8,7 +8,7 @@
 		) Pause pop-up ; Done
 		) Credits Screen ; Done
 		) High Scores Screen ; Done
-		) How to Play screen ; 
+		) How to Play screen ; Done
 		) Game Over screen ; 
 		) Difficulty screen ; 
 		) Grid screen ; 
