Updated GameOver screen and pop-up to include code for internationalization data.

--- a/ToDo
+++ b/ToDo
@@ -9,7 +9,7 @@
 		) Credits Screen ; Done
 		) High Scores Screen ; Done
 		) How to Play screen ; Done
-		) Game Over screen ; 
+		) Game Over screen ; Done
 		) Difficulty screen ; 
 		) Grid screen ; 
 	- Update themes so that checkboxButtons do not use words and instead use images of a tick and an x to signify "on" and "off".
